changed to public

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "react-tailwindcss-portfolio",
 	"version": "0.1.0",
-	"private": true,
+	"private": false,
 	"dependencies": {
 		"@babel/plugin-proposal-async-generator-functions": "^7.20.7",
 		"@testing-library/jest-dom": "^5.17.0",
