--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.27",
 		"tailwindcss": "^3.3.3"
-	}
+	},
+	"homepage": "www.garshairavani.ca"
 }
